--- a/WindowsFormsApplication1/RedmineUpdate.csproj
+++ b/WindowsFormsApplication1/RedmineUpdate.csproj
@@ -106,6 +106,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedmineClientMFStrings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>RedmineClientMFStrings.resx</DependentUpon>
+    </Compile>
     <Compile Include="RedmineClientStrings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -133,9 +138,13 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RedmineClientMFStrings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>RedmineClientMFStrings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="RedmineClientStrings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>RedmineClientStrings.Designer.cs</LastGenOutput>
+      <LastGenOutput>RedmineClientStrings1.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="RedmineClientStrings.ru-RU.resx" />
     <None Include="Properties\Settings.settings">
